# kdesignerplugin

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5DesignerPluginMacros.cmake  README.md  metainfo.yaml
autotests/: CMakeLists.txt  minimal.widgets  minimaltest.cpp  plugintest.cpp  testplugin.qrc  testplugin.widgets
docs/kgendesignerplugin/: CMakeLists.txt  man-kgendesignerplugin.1.docbook
po/af/: kdesignerplugin5_qt.po
po/ar/: kdesignerplugin5_qt.po
po/as/: kdesignerplugin5_qt.po
po/as/scripts/: kdesignerplugin5_qt.po
po/ast/: kdesignerplugin5_qt.po
po/ast/scripts/: kdesignerplugin5_qt.po
po/az/: kdesignerplugin5_qt.po
po/be/: kdesignerplugin5_qt.po
po/be/scripts/: kdesignerplugin5_qt.po
po/be@latin/: kdesignerplugin5_qt.po
po/bg/: kdesignerplugin5_qt.po
po/bn/: kdesignerplugin5_qt.po
po/bn_IN/: kdesignerplugin5_qt.po
po/br/: kdesignerplugin5_qt.po
po/br/scripts/: kdesignerplugin5_qt.po
po/bs/: kdesignerplugin5_qt.po
po/ca/: kdesignerplugin5_qt.po
po/ca/docs/kgendesignerplugin/: man-kgendesignerplugin.1.docbook
po/ca@valencia/: kdesignerplugin5_qt.po
po/ca@valencia/scripts/: kdesignerplugin5_qt.po
po/crh/: kdesignerplugin5_qt.po
po/cs/: kdesignerplugin5_qt.po
po/csb/: kdesignerplugin5_qt.po
po/cy/: kdesignerplugin5_qt.po
po/da/: kdesignerplugin5_qt.po
po/da/scripts/: kdesignerplugin5_qt.po
po/de/: kdesignerplugin5_qt.po
po/el/: kdesignerplugin5_qt.po
po/el/scripts/: kdesignerplugin5_qt.po
po/en_GB/: kdesignerplugin5_qt.po
po/en_GB/scripts/: kdesignerplugin5_qt.po
po/eo/: kdesignerplugin5_qt.po
po/es/: kdesignerplugin5_qt.po
po/et/: kdesignerplugin5_qt.po
po/eu/: kdesignerplugin5_qt.po
po/fa/: kdesignerplugin5_qt.po
po/fi/: kdesignerplugin5_qt.po
po/fi/scripts/: kdesignerplugin5_qt.po
po/fr/: kdesignerplugin5_qt.po
po/fr/scripts/: kdesignerplugin5_qt.po
po/fy/: kdesignerplugin5_qt.po
po/fy/scripts/: kdesignerplugin5_qt.po
po/ga/: kdesignerplugin5_qt.po
po/gd/: kdesignerplugin5_qt.po
po/gl/: kdesignerplugin5_qt.po
po/gu/: kdesignerplugin5_qt.po
po/ha/: kdesignerplugin5_qt.po
po/he/: kdesignerplugin5_qt.po
po/he/scripts/: kdesignerplugin5_qt.po
po/hi/: kdesignerplugin5_qt.po
po/hne/: kdesignerplugin5_qt.po
po/hne/scripts/: kdesignerplugin5_qt.po
po/hr/: kdesignerplugin5_qt.po
po/hsb/: kdesignerplugin5_qt.po
po/hsb/scripts/: kdesignerplugin5_qt.po
po/hu/: kdesignerplugin5_qt.po
po/hy/: kdesignerplugin5_qt.po
po/hy/scripts/: kdesignerplugin5_qt.po
po/ia/: kdesignerplugin5_qt.po
po/id/: kdesignerplugin5_qt.po
po/id/scripts/: kdesignerplugin5_qt.po
po/is/: kdesignerplugin5_qt.po
po/it/: kdesignerplugin5_qt.po
po/ja/: kdesignerplugin5_qt.po
po/ja/scripts/: kdesignerplugin5_qt.po
po/ka/: kdesignerplugin5_qt.po
po/ka/scripts/: kdesignerplugin5_qt.po
po/kk/: kdesignerplugin5_qt.po
po/km/: kdesignerplugin5_qt.po
po/km/scripts/: kdesignerplugin5_qt.po
po/kn/: kdesignerplugin5_qt.po
po/ko/: kdesignerplugin5_qt.po
po/ku/: kdesignerplugin5_qt.po
po/lb/: kdesignerplugin5_qt.po
po/lb/scripts/: kdesignerplugin5_qt.po
po/lt/: kdesignerplugin5_qt.po
po/lv/: kdesignerplugin5_qt.po
po/lv/scripts/: kdesignerplugin5_qt.po
po/mai/: kdesignerplugin5_qt.po
po/mk/: kdesignerplugin5_qt.po
po/ml/: kdesignerplugin5_qt.po
po/ml/scripts/: kdesignerplugin5_qt.po
po/mr/: kdesignerplugin5_qt.po
po/ms/: kdesignerplugin5_qt.po
po/nb/: kdesignerplugin5_qt.po
po/nds/: kdesignerplugin5_qt.po
po/nds/scripts/: kdesignerplugin5_qt.po
po/ne/: kdesignerplugin5_qt.po
po/ne/scripts/: kdesignerplugin5_qt.po
po/nl/: kdesignerplugin5_qt.po
po/nn/: kdesignerplugin5_qt.po
po/oc/: kdesignerplugin5_qt.po
po/or/: kdesignerplugin5_qt.po
po/or/scripts/: kdesignerplugin5_qt.po
po/pa/: kdesignerplugin5_qt.po
po/pa/scripts/: kdesignerplugin5_qt.po
po/pl/: kdesignerplugin5_qt.po
po/ps/: kdesignerplugin5_qt.po
po/pt/: kdesignerplugin5_qt.po
po/pt_BR/: kdesignerplugin5_qt.po
po/ro/: kdesignerplugin5_qt.po
po/ro/scripts/: kdesignerplugin5_qt.po
po/ru/: kdesignerplugin5_qt.po
po/se/: kdesignerplugin5_qt.po
po/si/: kdesignerplugin5_qt.po
po/si/scripts/: kdesignerplugin5_qt.po
po/sk/: kdesignerplugin5_qt.po
po/sk/scripts/: kdesignerplugin5_qt.po
po/sl/: kdesignerplugin5_qt.po
po/sl/scripts/: kdesignerplugin5_qt.po
po/sq/: kdesignerplugin5_qt.po
po/sr/: kdesignerplugin5_qt.po
po/sr/scripts/: kdesignerplugin5_qt.po
po/sr@ijekavian/: kdesignerplugin5_qt.po
po/sr@ijekavian/scripts/: kdesignerplugin5_qt.po
po/sr@ijekavianlatin/: kdesignerplugin5_qt.po
po/sr@latin/: kdesignerplugin5_qt.po
po/sv/: kdesignerplugin5_qt.po
po/ta/: kdesignerplugin5_qt.po
po/te/: kdesignerplugin5_qt.po
po/tg/: kdesignerplugin5_qt.po
po/tg/scripts/: kdesignerplugin5_qt.po
po/th/: kdesignerplugin5_qt.po
po/th/scripts/: kdesignerplugin5_qt.po
po/tr/: kdesignerplugin5_qt.po
po/tr/scripts/: kdesignerplugin5_qt.po
po/tt/: kdesignerplugin5_qt.po
po/ug/: kdesignerplugin5_qt.po
po/uk/: kdesignerplugin5_qt.po
po/uk/scripts/: kdesignerplugin5_qt.po
po/uz/: kdesignerplugin5_qt.po
po/uz@cyrillic/: kdesignerplugin5_qt.po
po/vi/: kdesignerplugin5_qt.po
po/vi/scripts/: kdesignerplugin5_qt.po
po/wa/: kdesignerplugin5_qt.po
po/x-test/: kdesignerplugin5_qt.po
po/xh/: kdesignerplugin5_qt.po
po/zh_CN/: kdesignerplugin5_qt.po
po/zh_HK/: kdesignerplugin5_qt.po
po/zh_HK/scripts/: kdesignerplugin5_qt.po
po/zh_TW/: kdesignerplugin5_qt.po
poqm/ar/: kdesignerplugin5_qt.po
poqm/de/: kdesignerplugin5_qt.po
poqm/eo/: kdesignerplugin5_qt.po
poqm/fa/: kdesignerplugin5_qt.po
poqm/fr/: kdesignerplugin5_qt.po
poqm/gl/: kdesignerplugin5_qt.po
poqm/he/: kdesignerplugin5_qt.po
poqm/ia/: kdesignerplugin5_qt.po
poqm/ja/: kdesignerplugin5_qt.po
poqm/x-test/: kdesignerplugin5_qt.po
poqm/zh_CN/: kdesignerplugin5_qt.po
src/: CMakeLists.txt  Messages.sh  classpreviews.cpp  classpreviews.h  kde.widgets  kdewebkit.widgets  kdewidgets.qrc  kgendesignerplugin.cpp
src/pics/: CMakeLists.txt
(+9 files in other folders)
